<adds concrete seamless and actually fixes header overflow>

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body {
-    background: url('../images/vintage-concrete/vintage-concrete/vintage-concrete.png');
+    background: url('../images/concrete_seamless.png');
     font-size: 18px;
     line-height: 34px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -40,7 +40,7 @@ h2, h3 {
     margin: 0 0 30px;
     z-index: 99;
     color: #fff;
-    overflow: auto;
+    overflow: hidden;
     border-bottom: 2px solid #ccc;
     position: fixed;
     width: 100%;
